# bh-audit-logger

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tests.yml
docs/: deploying-dynamodb.md  migrating-1.0-to-1.1.md  storage-patterns.md  telemetry.md  threat-model.md
examples/: access_denied_role.json  batch_export_success.json  cross_org_access_denied.json  worker_read_success.json
src/bh_audit_logger/: __init__.py  _chain.py  _chain_state.py  _queue.py  _stats.py  _telemetry.py  _types.py  _validation.py  _verifier.py  cli.py  config.py  logger.py  redaction.py  validation.py
src/bh_audit_logger/schema/: __init__.py  audit_event.schema.json
src/bh_audit_logger/schema/versions/1.1/: audit_event.schema.json
src/bh_audit_logger/sinks/: __init__.py  base.py  dynamodb.py  jsonl.py  ledger.py  logging_sink.py  memory.py
tests/: conftest.py  test_chain.py  test_chain_state.py  test_cli.py  test_denied_outcome.py  test_dynamodb_chain_integration.py  test_dynamodb_sink.py  test_emit.py  test_enum_parity.py  test_event_builder.py  test_hardening.py  test_integrity_integration.py  test_jsonl_sink.py  test_ledger_sink.py  test_logging_sink.py  test_phi_safety.py  test_public_api.py  test_schema_negotiation.py  test_schema_validation.py  test_telemetry.py  test_validation_runtime.py  test_verifier.py
tests/fixtures/: phi_tokens.json
